[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
name = "nucleo-l031k6-bsp"
version = "0.1.1"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for the ST L031K6-NUCLEO"
keywords = ["embedded-hal", "stm32l031k6", "nucleo", "stm32l0x1", "stm32"]
license = "0BSD"
repository = "https://github.com/thenewwazoo/nucleo-l031k6-bsp/"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.4"
panic-halt = "0.2.0"
stm32l0x1 = "0.13.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32l0x1-hal]
features = ["STM32L031x6", "rt"]
version = "0.7"

[profile]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 2
